This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
12/3/17: Added frame alignment for DE camera frames.

12/3/17: Fixed coordinates in piece put into mdoc file.

11/30/17: Enabled obtaining normalized images from AMT cameras if AMT version
is high enough (In 3.6).

11/30/17: Fixed crash from using drift correction with OneView with a
non-square subarea (In 3.6).

11/26/17: Added option to skip file properties dialog.  Started saving file
type and compression type for save single/other in settings so it would be
easy to save a particular type of compressed tiff from that command without
having to revisit the file properties dialog.

11/24/17: Made the program store the fraction of the area in the frame
occupied by the main image window so that the window can be kept reliably
smaller than the frame; the allocation of width between the main and
FFT window is also stored and can be easily adjusted.

11/20/17: Fixed potential problems with spot intensity calibrations that do
not start at spot 1 (In 3.6).

11/19/17: Added small dialog for entering and running a single-line script
command.

11/9/17: Substituted variables in SaveLogOpenNew command (In 3.6).

11/8/17: Fixed loss of PriorRecordDose and FramesDosesCounts from mdoc for
first part of bidirectional tilt series.

11/5/17 SEM_3-6-13
11/5/17: Fixed the lack of defect correction when drift correction is used in
the OneView if there is no BasicCorrections property entry (In 3.6).

11/3/17: Preliminary version with changes for DE camera
counting/super-resolution modes and ability to set save folder.

11/3/17: Rearranged camera setup so that dark reference options could be
hidden when inappropriate, also hide shuttering and lower size buttons for
Falcon.
