@@ -1878,7 +1878,7 @@
         </TR>
         <TR vAlign="top">
           <TD class="style12">MeasureBeamSize [#B]</TD>
-          <TD>Measures the beam size by detecting its edges in the image in buffer A, or in 
+          <TD>Measures the beam diameter by detecting its edges in the image in buffer A, or in 
             the buffer given by the optional #B.&nbsp; The value is reported in microns.</TD>
         </TR>
         <TR vAlign="top">
